<resources>
    <string name="app_name">FTP</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="ftp_server">Ftp Server</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="anonymous">anonymous</string>
    <string name="please_wait">Please wait</string>

</resources>
