<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_padding"
        android:text="@string/ftp_server"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/server_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/server_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:hint="@string/server"
            android:textSize="@dimen/text_size_16" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/port_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/server_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/port_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:hint="@string/port"
            android:textSize="@dimen/text_size_16" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/port_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:hint="@string/username"
            android:textSize="@dimen/text_size_16" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:hint="@string/password"
            android:textSize="@dimen/text_size_16" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/anonymous_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_padding"
        android:layout_marginEnd="@dimen/dialog_padding"
        android:text="@string/anonymous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout" />

    <View
        android:id="@+id/line_horizontal_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/line"
        android:layout_marginTop="@dimen/dialog_padding"
        android:background="@color/line"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anonymous_chk" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toStartOf="@+id/line_vertical_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_horizontal_view" />

    <View
        android:id="@+id/line_vertical_view"
        android:layout_width="@dimen/line"
        android:layout_height="0dp"
        android:background="@color/line"
        app:layout_constraintBottom_toBottomOf="@id/cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancel_btn" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/confirm"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line_vertical_view"
        app:layout_constraintTop_toBottomOf="@id/line_horizontal_view" />

</android.support.constraint.ConstraintLayout>
